# try_yew_with_flowbite

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  railwind.config.ron  tailwind.config.js
locales/: app.yml
src/: app.rs  main.rs  routes.rs
src/components/: aside.rs  footer.rs  mod.rs  navbar.rs
